# django_forge_ai

./: .debug_history.tmp  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  upload_with_token.sh
django_forge_ai/: __init__.py  apps.py  models.py  settings.py  signals.py  tasks.py
django_forge_ai/admin_integration/: __init__.py  apps.py  mixins.py  views.py
django_forge_ai/agents/: __init__.py  admin.py  apps.py  models.py  orchestrator.py
django_forge_ai/rag_system/: __init__.py  admin.py  apps.py  mixins.py  models.py  vector_utils.py
django_forge_ai/utils/: __init__.py  llm_client.py  validation.py
