[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-forge-ai"
version = "0.1.0"
description = "A comprehensive AI toolbox for Django - seamless integration of LLM functionalities, RAG systems, and AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "DjangoForgeAI Contributors", email = "your-email@example.com"}
]
maintainers = [
    {name = "DjangoForgeAI Contributors", email = "your-email@example.com"}
]
keywords = ["django", "ai", "llm", "rag", "vector-database", "openai", "anthropic", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "django>=3.2",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "chromadb>=0.4.0",
    "qdrant-client>=1.6.0",
    "psycopg2-binary>=2.9.0",
    "celery>=5.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/django-forge-ai"
Documentation = "https://github.com/yourusername/django-forge-ai#readme"
Repository = "https://github.com/yourusername/django-forge-ai"
Issues = "https://github.com/yourusername/django-forge-ai/issues"
Changelog = "https://github.com/yourusername/django-forge-ai/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["django_forge_ai"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

